EmissionFactorMatching/objects/NZC_EmissionsMatchingCustomLookups__mdt.object
<CustomObject>
    <description>Used to allow a fuel type to search a different lookup field for emissions factor base set</description>
    <fields>
        <fullName>FuelAppliesFor__c</fullName>
        <description>What fuel type does this custom lookup mapping apply for?</description>
        <inlineHelpText>What fuel type does this custom lookup mapping apply for?</inlineHelpText>
        <label>Fuel Applies for</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LookupToSearch__c</fullName>
        <description>What API lookup field name should this fuel type look into on the asset?</description>
        <inlineHelpText>What API lookup field name should this fuel type look into on the asset?</inlineHelpText>
        <label>Lookup to Search</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectAppliesFor__c</fullName>
        <description>What object does this custom fuel mapping lookup apply to?</description>
        <inlineHelpText>What object does this custom fuel mapping lookup apply to?</inlineHelpText>
        <label>Object Applies for</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>NZC_EmissionsMatchingCustomLookups</label>
    <pluralLabel>NZC_EmissionsMatchingCustomLookups</pluralLabel>
</CustomObject>